--- a/.github/workflows/tokens.yml
+++ b/.github/workflows/tokens.yml
@@ -17,4 +17,5 @@ jobs:
             token: ${{ fromJson(needs.list-tokens.outputs.matrix) }}
     steps:
       - uses: actions/checkout@v2   
-      - run: echo "Token: ${{ matrix.token }}"
+      - run: |
+        echo Token ${{ matrix.token }}
