--- a/.github/workflows/tokens.yml
+++ b/.github/workflows/tokens.yml
@@ -17,5 +17,4 @@ jobs:
             token: ${{ fromJson(needs.list-tokens.outputs.matrix) }}
     steps:
       - uses: actions/checkout@v2   
-      - run: |
-        echo Token ${{ matrix.token }}
+      - run: echo "🍏 This job's status is ${{ job.status }}."
