--- a/.github/workflows/tokens.yml
+++ b/.github/workflows/tokens.yml
@@ -21,3 +21,12 @@ jobs:
       - uses: actions/checkout@v2   
       - id: set-components
         run: echo "::set-output name=components::$(ls tokens/${{ matrix.token }} | jq -R -s -c 'split("\n")[:-1]')"
+  compile:
+    needs: list-token-components
+    runs-on: ubuntu-latest
+    strategy:
+        matrix:
+            component: ${{ fromJson(needs.list-token-components.outputs.components) }}
+    steps:
+      - uses: actions/checkout@v2   
+      - run: echo "token ${{ matrix.component }}"
