--- a/.github/workflows/tokens.yml
+++ b/.github/workflows/tokens.yml
@@ -22,6 +22,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2   
       - run: mkdir -p $BUILD_TARGET_DIR
+      - uses: pkoehlers/openscad-build-action@v1
+        with:
+          input-file: $BUILD_INPUT
+          output-file: $BUILD_OUTPUT
       - name: Archive Compiled STL Files
         uses: actions/upload-artifact@v4
         with:
