--- a/.github/workflows/tokens.yml
+++ b/.github/workflows/tokens.yml
@@ -39,6 +39,7 @@ jobs:
         uses: actions/download-artifact@v4
         with: 
           merge-multiple: true
+          path: build
       - name: Upload Release Package
         uses: actions/upload-artifact@v4
         with:
