--- a/.github/workflows/tokens.yml
+++ b/.github/workflows/tokens.yml
@@ -72,7 +72,9 @@ jobs:
       - name: Release
         uses: softprops/action-gh-release@v2
         with:
-          files: *.tar.gz
+          files: |
+           swu-tokens-$GITHUB_REF_NAME.tar.gz
+           swu-tokens-source-$GITHUB_REF_NAME.tar.gz
           tag_name: $GITHUB_REF_NAME
       
       
