--- a/.github/workflows/tokens.yml
+++ b/.github/workflows/tokens.yml
@@ -59,9 +59,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4 
         with:
-          path: swu-tokens-source-$GITHUB_REF_NAME
+          path: swu-tokens-source
       - name: Create Source Tarall
-        run: tar czf swu-tokens-source-$GITHUB_REF_NAME.tar.gz swu-tokens-source-$GITHUB_REF_NAME
+        run: tar czf swu-tokens-source-$GITHUB_REF_NAME.tar.gz swu-tokens-source
       - name: Download all existing artifacts
         uses: actions/download-artifact@v4
         with: 
