crete release step

--- a/.github/workflows/tokens.yml
+++ b/.github/workflows/tokens.yml
@@ -63,7 +63,7 @@ jobs:
       - name: Create Source Tarall
         run: |
           mv swu-tokens-source "swu-tokens-source-$GITHUB_REF_NAME.tar.gz"
-          tar czf swu-tokens-source-$GITHUB_REF_NAME.tar.gz swu-tokens-source
+          tar czf "swu-tokens-source-$GITHUB_REF_NAME.tar.gz" swu-tokens-source
       - name: Download all existing artifacts
         uses: actions/download-artifact@v4
         with: 
@@ -71,14 +71,14 @@ jobs:
           path: swu-tokens
       - name: Create Build Tarall
         run: |
-         mv swu-tokens swu-tokens-$GITHUB_REF_NAME
-         tar czf swu-tokens-$GITHUB_REF_NAME.tar.gz swu-tokens-$GITHUB_REF_NAME
+         mv swu-tokens "swu-tokens-$GITHUB_REF_NAME"
+         tar czf "swu-tokens-$GITHUB_REF_NAME.tar.gz" "swu-tokens-$GITHUB_REF_NAME"
       - name: Release
         uses: softprops/action-gh-release@v2
         with:
           files: |
-           swu-tokens-$GITHUB_REF_NAME.tar.gz
-           swu-tokens-source-$GITHUB_REF_NAME.tar.gz
+           "swu-tokens-$GITHUB_REF_NAME.tar.gz"
+           "swu-tokens-source-$GITHUB_REF_NAME.tar.gz"
           tag_name: $GITHUB_REF_NAME
       
       
