--- a/.github/workflows/tokens.yml
+++ b/.github/workflows/tokens.yml
@@ -62,8 +62,8 @@ jobs:
           path: swu-tokens-source
       - name: Create Source Tarall
         run: |
-          mv swu-tokens-source "swu-tokens-source-$GITHUB_REF_NAME.tar.gz"
-          tar czf "swu-tokens-source-$GITHUB_REF_NAME.tar.gz" swu-tokens-source
+          mv swu-tokens-source "swu-tokens-source-$GITHUB_REF_NAME"
+          tar czf "swu-tokens-source-$GITHUB_REF_NAME.tar.gz" "swu-tokens-source-$GITHUB_REF_NAME"
       - name: Download all existing artifacts
         uses: actions/download-artifact@v4
         with: 
@@ -79,7 +79,7 @@ jobs:
           files: |
            "swu-tokens-$GITHUB_REF_NAME.tar.gz"
            "swu-tokens-source-$GITHUB_REF_NAME.tar.gz"
-          tag_name: $GITHUB_REF_NAME
+          tag_name: "$GITHUB_REF_NAME"
       
       
 
