--- a/.github/workflows/tokens.yml
+++ b/.github/workflows/tokens.yml
@@ -57,28 +57,19 @@ jobs:
     runs-on: ubuntu-latest
     if: startsWith(github.event.ref, 'refs/tags/v')
     steps:
-      - uses: actions/checkout@v4 
-        with:
-          path: swu-tokens-source
-      - name: Create Source Tarall
-        run: |
-          mv swu-tokens-source "swu-tokens-source-${{ github.ref_name }}"
-          tar czf "swu-tokens-source-${{ github.ref_name }}.tar.gz" "swu-tokens-source-${{ github.ref_name }}"
-      - name: Download all existing artifacts
+      - name: Download Release Package Artifact
         uses: actions/download-artifact@v4
         with: 
           name: release-package
-          path: swu-tokens
       - name: Create Build Tarall
         run: |
-         mv swu-tokens "swu-tokens-${{ github.ref_name }}"
+         mv release-package "swu-tokens-${{ github.ref_name }}"
          tar czf "swu-tokens-${{ github.ref_name }}.tar.gz" "swu-tokens-${{ github.ref_name }}"
       - name: Release
         uses: softprops/action-gh-release@v2
         with:
           files: |
            "swu-tokens-${{ github.ref_name }}.tar.gz"
-           "swu-tokens-source-${{ github.ref_name }}.tar.gz"
           tag_name: "${{ github.ref_name }}"
           token: ${{ secrets.RELEASE_TOKEN_GITHUB }}
       
