--- a/.github/workflows/tokens.yml
+++ b/.github/workflows/tokens.yml
@@ -61,13 +61,12 @@ jobs:
         uses: actions/download-artifact@v4
         with: 
           name: release-package
+          path: "swu-tokens-${{ github.ref_name }}"
       - name: Display structure of downloaded files
         run: ls -R
       - name: Create Build Tarall
-        run: |
-         mv release-package "swu-tokens-${{ github.ref_name }}"
-         tar czf "swu-tokens-${{ github.ref_name }}.tar.gz" "swu-tokens-${{ github.ref_name }}"
-      - name: Release
+        run: tar czf "swu-tokens-${{ github.ref_name }}.tar.gz" "swu-tokens-${{ github.ref_name }}"
+      - name: Generate Github Release
         uses: softprops/action-gh-release@v2
         with:
           files: |
