--- a/.github/workflows/tokens.yml
+++ b/.github/workflows/tokens.yml
@@ -24,8 +24,9 @@ jobs:
       - uses: actions/checkout@v4   
       - name: Install Fonts
         env: 
-          FONTS_INSTALL_DIR: ~/.local/share/fonts
+          FONTS_INSTALL_DIR: /home/runner/.local/share/fonts
         run: |
+          echo "Fonts are at $FONTS_INSTALL_DIR"
           mkdir -p "$FONTS_INSTALL_DIR"
           cp -r fonts/* "$FONTS_INSTALL_DIR"
           fc-cache -f -v
